snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-sources.jar.sha256
7bdc0c771f1b606114cd0fd8d4114ee7b69712a06c8c8b841f67da41833696af